servicemesh/8.federation/federated-services/mesh-one/istio-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: quarkus-demo-gateway
  namespace: frontend-namespace
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - quarkus-notes.apps.lab01.gpslab.club
