servicemesh/8.federation/federated-services/mesh-one/postgres-virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: postgres-demo-vs
  namespace: frontend-namespace
spec:
  hosts:
    - postgres-service.frontend-namespace.svc.cluster.local
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        weight: 100
        host: postgres-service.backend.svc.mesh-two-imports.local
        port:
          number: 5432
